[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cards"
authors = [{name = "Brian Okken"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python=">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "tinydb==4.8.0",
    "typer==0.9.0",
    "rich==13.5.2"
]

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
    "coverage",
    "pytest-cov",
]

[project.urls]
Home = "https://github.com/okken/cards"

[project.scripts]
cards = "cards:app"

