[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cards"
authors = [{name = "Brian Okken"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python=">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "tinydb==4.8.2",
    "typer==0.17.4",
    "rich==14.1.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
    "tox-uv",
    "coverage",
    "pytest-cov",
]

[project.urls]
Home = "https://github.com/okken/cards"

[project.scripts]
cards = "cards:app"

